maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: type mismatch;
 found   : Int
 required: Boolean
    if (aMurNord(x,y) == false && getIndication(x,y-1)) {
                                               ^JediEscaper:25: error: not found: value aMurSud
    if (aMurSud(x,y) == false && getIndication(x,y+1)) {
        ^JediEscaper:28: error: not found: value aMurEst
    if (aMurEst(x,y) == false && getIndication(x+1,y)) {
        ^JediEscaper:31: error: type mismatch;
 found   : Int
 required: Boolean
    if (aMurOuest(x,y) == false && getIndication(x-1,y)) {
                                                ^